deploy/k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgresql-placeholder
        startupProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - librephotos
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 60
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - librephotos
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - librephotos
          timeoutSeconds: 5
        ports:
        - containerPort: 5432
          name: psql
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
      name: psql
  selector:
    app: postgres
