deploy/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend-placeholder
        ports:
        - name: http
          containerPort: 3000
        securityContext:
          readOnlyRootFilesystem: true
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: frontend
